--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type:check": "tsc --noEmit --jsx preserve",
+    "eslint:check": "eslint .",
+    "eslint:fix": "eslint --fix ."
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -61,6 +64,7 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@next/swc-wasm-nodejs": "15.4.6",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "24.2.0",
     "@types/react": "19.1.9",
