--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.6.1",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -47,6 +48,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.536.0",
+    "negotiator": "^1.0.0",
     "next": "^15.4.6",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
