fix: update ingress path to /v2
The ingress path was updated from a dynamic value based on `$.Values.werf.name` to a static `/v2` endpoint. This change ensures consistent routing for the service.

--- a/.helm/templates/ingress.yaml
+++ b/.helm/templates/ingress.yaml
@@ -13,7 +13,7 @@ spec:
   - host: {{ $.Values.env.DOMAIN }}
     http:
       paths:
-      - path: /{{ $.Values.werf.name }}
+      - path: /v2
         pathType: Prefix
         backend:
           service:
