--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "negotiator": "^1.0.0",
     "next": "^15.4.6",
     "next-themes": "^0.4.6",
+    "plural-ru": "^2.0.2",
     "react": "^19.1.1",
     "react-day-picker": "9.8.1",
     "react-dom": "19.1.1",
