--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^4.1.12",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "@imarketplace/types": "link:@imarketplace/types"
   },
   "devDependencies": {
     "typescript": "^5.9.3",
