--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "lucide-react": "^0.536.0",
     "negotiator": "^1.0.0",
     "next": "^15.4.6",
-    "next-auth": "^4.24.11",
+    "next-auth": "beta",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-day-picker": "9.8.1",
