Use shared config for base path and backend URL
Move NEXT_PUBLIC_BASE_PATH and NEXT_PUBLIC_BACKEND_URL to shared config,
expose via Dockerfile args, update deployment envs and AuthProvider to
use shared config, add NEXT_AUTH_URL env var.

--- a/.helm/templates/deployment.yaml
+++ b/.helm/templates/deployment.yaml
@@ -39,6 +39,8 @@ spec:
         #  value: "{{ $.Values.env.DATABASE_URL }}?sslmode=require&sslrootcert=/var/run/autocert.step.sm/root.crt&sslcert=/var/run/autocert.step.sm/site.crt&sslkey=/var/run/autocert.step.sm/site.key"
         - name: DOMAIN
           value: {{ $.Values.env.DOMAIN }}
+        - name: NEXT_AUTH_URL
+          value: "https://imarketplacefront-main.iconicompany.icncd.ru/v2/api/auth"
         # {{- range $name, $value := .Values.env }}
         # - name: {{ $name }}
         #   value: {{ $value | quote }}
