--- a/werf.yaml
+++ b/werf.yaml
@@ -4,6 +4,8 @@ configVersion: 1
 ---
 image: app
 dockerfile: Dockerfile
-#args: { DATABASE_URL: "postgres://imarketplacefront{{ .Env }}@postgresql01.kube01.icncd.ru/imarketplacefront?schema=imarketplacefront{{ .Env }}&sslmode=require&sslrootcert=/root/.step/certs/root_ca.crt&sslcert=/root/.step/certs/my.crt&sslkey=/root/.step/certs/my.key" }
+args:
+  NEXT_PUBLIC_BASE_PATH: /v2
+  NEXT_PUBLIC_BACKEND_URL: https://imarketplacematching-main.iconicompany.icncd.ru
 #contextAddFiles:
 #- .step/
