Add AUTH_TRUST_HOST to .env.example and Helm

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
@@ -5,6 +6,7 @@ GOOGLE_CLIENT_SECRET=
 # NextAuth Configuration
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=
+AUTH_TRUST_HOST=true
 
 # Backend API Configuration
 BACKEND_URL=https://imarketplacematching-main.iconicompany.icncd.ru/api
