--- a/.helm/templates/deployment.yaml
+++ b/.helm/templates/deployment.yaml
@@ -41,6 +41,8 @@ spec:
           value: {{ $.Values.env.DOMAIN }}
         - name: NEXT_AUTH_URL
           value: "https://imarketplacefront-main.iconicompany.icncd.ru/v2/api/auth"
+        - name: AUTH_TRUST_HOST
+          value: true
         # {{- range $name, $value := .Values.env }}
         # - name: {{ $name }}
         #   value: {{ $value | quote }}
