--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,7 @@ NEXTAUTH_SECRET=
 AUTH_TRUST_HOST=true
 
 # Backend API Configuration
-BACKEND_URL=https://imarketplacematching-main.iconicompany.icncd.ru/api
+NEXT_PUBLIC_BACKEND_URL=https://imarketplacematching-main.iconicompany.icncd.ru/api
+
+# Base Path Configuration
+NEXT_PUBLIC_BASE_PATH=
